fix broken rss modal align

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -14695,7 +14695,12 @@ http://codepen.io/MattIn4D/pen/LiKFC
   color: #737373;
 }
 
-/* line 110, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 111, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+.appmodal-body .rss-description ul {
+  list-style-position: inside;
+}
+
+/* line 118, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 .appmodal-footer {
   border-top: solid 1px #cccccc;
   text-align: right;
@@ -14703,21 +14708,21 @@ http://codepen.io/MattIn4D/pen/LiKFC
 
 /* Modal with knob
 -------------------------------------------------- */
-/* line 117, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 125, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 .app-row-knob {
   /* MIN WIDTH */
   /* MAX WIDTH */
 }
 
 @media only screen and (min-width: 768px) {
-  /* line 117, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+  /* line 125, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
   .app-row-knob {
     display: table;
     width: 100%;
   }
 }
 
-/* line 123, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 131, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 .app-row-knob .knob-col {
   padding: 10px;
   /* MIN WIDTH */
@@ -14725,7 +14730,7 @@ http://codepen.io/MattIn4D/pen/LiKFC
 }
 
 @media only screen and (min-width: 768px) {
-  /* line 123, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+  /* line 131, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
   .app-row-knob .knob-col {
     display: table-cell;
     vertical-align: middle;
@@ -14734,32 +14739,32 @@ http://codepen.io/MattIn4D/pen/LiKFC
   }
 }
 
-/* line 134, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 142, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 .app-row-knob .knob-ctrl {
   /* MIN WIDTH */
   /* MAX WIDTH */
 }
 
 @media only screen and (min-width: 768px) {
-  /* line 134, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+  /* line 142, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
   .app-row-knob .knob-ctrl {
     text-align: right;
   }
 }
 
-/* line 139, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 147, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 .app-row-knob .knob-btn {
   /* MIN WIDTH */
   /* MAX WIDTH */
 }
 
-/* line 140, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 148, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 .app-row-knob .knob-btn p {
   margin: 0 0 10px;
 }
 
 @media only screen and (min-width: 768px) {
-  /* line 139, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+  /* line 147, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
   .app-row-knob .knob-btn {
     text-align: left;
   }
@@ -14767,7 +14772,7 @@ http://codepen.io/MattIn4D/pen/LiKFC
 
 /* Confirm content
 -------------------------------------------------- */
-/* line 151, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 159, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 .app-confirm-content {
   padding: 10px;
   border: solid 1px #cccccc;
@@ -14778,7 +14783,7 @@ http://codepen.io/MattIn4D/pen/LiKFC
 
 /* Modal James Box
 -------------------------------------------------- */
-/* line 161, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 169, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 #jamesBoxUpdateModal #updateTimeout {
   text-align: center;
   font-weight: bold;
@@ -14786,19 +14791,19 @@ http://codepen.io/MattIn4D/pen/LiKFC
   font-size: 16px;
 }
 
-/* line 168, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 176, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 #jamesBoxUpdateModal ol {
   margin: 15px 0;
 }
 
-/* line 172, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 180, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 #jamesBoxUpdateModal li.jamesboxUpdateInfoList {
   margin: 0 0 5px 0;
 }
 
 /* Modal element event
 -------------------------------------------------- */
-/* line 179, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 187, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 #modalEvent .appmodal-body {
   height: auto;
   max-height: 500px;
@@ -14807,7 +14812,7 @@ http://codepen.io/MattIn4D/pen/LiKFC
 
 /* Modal with scroll
 -------------------------------------------------- */
-/* line 190, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
+/* line 198, E:/GitHub/zwave-smarthome/app/sass/base/_modal.scss */
 .modal-h-700 .appmodal-body {
   height: auto;
   max-height: 700px;
