--- a/app/sass/base/_modal.scss
+++ b/app/sass/base/_modal.scss
@@ -105,6 +105,14 @@
 }
 
 .appmodal-body {
+
+
+  .rss-description {
+    ul {
+      list-style-position: inside;
+    }
+  }
+
 }
 
 .appmodal-footer {
